# cohan_metrics

./: CMakeLists.txt  package.xml
include/cohan_metrics/: cohan_metrics.hh
logs/: Readme.md  extract_metrics.py  log.txt  process_logs.py  process_logs_qt.py  social_1.txt
logs/data/: tec_b_1.txt
src/: cohan_metrics.cpp  cohan_metrics_node.cpp
